--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pybasics
-version = 0.1
+version = 0.2b
 author = Florian Malard, PhD
 author_email = florian.malard@gmail.com
 description = Basic utils in Python.
