--- a/setup.cfg
+++ b/setup.cfg
@@ -19,8 +19,9 @@ package_dir =
     = src
 packages = find:
 python_requires = >=3.7
-include_package_data = True
 
 [options.packages.find]
 where = src
 
+[options.package_data]
+* = *.in
